Fix bottom scrollbar

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -174,7 +174,6 @@ a.color-purple-500 {
     border: 1px solid rgba(43, 49, 55, 0.07);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 4px 5px rgba(0, 0, 0, 0.02), 0 10px 18px rgba(43, 49, 55, 0.25);
     border-radius: $radius;
-    width: 12.5rem;
 }
 
 .nav-pills {
